--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,11 +1,10 @@
 <nav>
   <ul>
-    <li><strong>Acme Corp</strong></li>
+    <li>A logo here idk</li>
   </ul>
   <p>Santiago Mondragón Gómez</p>
   <ul>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Products</a></li>
+    <li><a href="#">about me</a></li>
+    <li><a href="#">contact</a></li>
   </ul>
 </nav>
