chore: Add element hierarchy for position items

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,36 +9,48 @@ import "../styles/styles.scss";
   <div class="container">
     <section>
       <h1>¡Hola! Soy Santiago.</h1>
-      <h3>
+      <h4>
         Un entusiasta de la informática, bajista aficionado y desarrollador
         full-stack de profesión. Trabajo como SSr Software Engineer en Mercado
         Libre.
-      </h3>
+      </h4>
     </section>
 
     <section>
       <h2>Experiencia profesional</h2>
-      <h3>Blablabla</h3>
+      <h3>Mercado Libre</h3>
+      <h4 class="position-name">SSr Software Engineer</h4>
+      <h5 class="position-interval">ene. 2023</h5>
+	  <h4 class="position-name">Jr Software Developer</h4>
+      <h5 class="position-interval">jul. 2021 - ene. 2023</h5>
+      <h4 class="position-description">
+        Responsable de la experiencia de consulta y modificación de datos de
+        cuenta de usuarios de la plataforma en 17 países de Latinoamérica.
+        Desarrollador front-end de los flujos en tecnologías de JavaScript como
+        React, Node y Express. Mantenedor de APIs de alto tráfico construidas en
+        Golang y Kotlin bajo la arquitectura de microservicios, en integración
+        con bases de datos y diversos servicios back-end.
+      </h4>
     </section>
 
     <section>
       <h2>Recorrido académico</h2>
-      <h3>
+      <h4>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
         doloremque accusantium fuga placeat itaque exercitationem sint
         voluptatibus soluta non magni. Neque vitae inventore, quibusdam hic
         obcaecati exercitationem ratione sit deserunt?
-      </h3>
+      </h4>
     </section>
 
     <section>
       <h2>Recorrido académico</h2>
-      <h3>
+      <h4>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
         doloremque accusantium fuga placeat itaque exercitationem sint
         voluptatibus soluta non magni. Neque vitae inventore, quibusdam hic
         obcaecati exercitationem ratione sit deserunt?
-      </h3>
+      </h4>
     </section>
 
     <section>
