chore: Itemize descriptions just so I can remember them for later

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,15 +21,19 @@ import "../styles/styles.scss";
       <h3>Mercado Libre</h3>
       <h4 class="position-name">SSr Software Engineer</h4>
       <h5 class="position-interval">ene. 2023</h5>
-	  <h4 class="position-name">Jr Software Developer</h4>
+      <h4 class="position-name">Jr Software Developer</h4>
       <h5 class="position-interval">jul. 2021 - ene. 2023</h5>
       <h4 class="position-description">
-        Responsable de la experiencia de consulta y modificación de datos de
-        cuenta de usuarios de la plataforma en 17 países de Latinoamérica.
-        Desarrollador front-end de los flujos en tecnologías de JavaScript como
-        React, Node y Express. Mantenedor de APIs de alto tráfico construidas en
-        Golang y Kotlin bajo la arquitectura de microservicios, en integración
-        con bases de datos y diversos servicios back-end.
+        → Responsable de la experiencia de consulta y modificación de datos
+        de cuenta de usuarios de la plataforma en 17 países de Latinoamérica. <br
+        /><br />
+
+        → Desarrollador front-end de los flujos en tecnologías de JavaScript
+        como React, Node y Express.<br /><br />
+
+        → Mantenedor de APIs de alto tráfico construidas en Golang y Kotlin bajo
+        la arquitectura de microservicios, en integración con bases de datos y
+        diversos servicios back-end.
       </h4>
     </section>
 
