chore: Add hyphens to line breaks to make text fill the cards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,8 @@ import "../styles/styles.scss";
       <h4 class="position-name">Jr Software Developer</h4>
       <h5 class="position-interval">jul. 2021 - ene. 2023</h5>
       <h4 class="position-description">
-        → Responsable de la experiencia de consulta y modificación de datos
-        de cuenta de usuarios de la plataforma en 17 países de Latinoamérica. <br
+        → Responsable de la experiencia de consulta y modificación de datos de
+        cuenta de usuarios de la plataforma en 17 países de Latinoamérica. <br
         /><br />
 
         → Desarrollador front-end de los flujos en tecnologías de JavaScript
@@ -40,6 +40,7 @@ import "../styles/styles.scss";
     <section>
       <h2>Recorrido académico</h2>
       <h4>
+        LlanfairpwllgwyngyllgogerychwyrndrobwllllantysiliogogogochdafsdfasdfasdfasdfasdfasdfasdfLlanfairpwllgwyngyllgogerychwyrndrobwllllantysiliogogogoch
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
         doloremque accusantium fuga placeat itaque exercitationem sint
         voluptatibus soluta non magni. Neque vitae inventore, quibusdam hic
