chore: Import simple.css

--- a/src/layouts/Homepage.astro
+++ b/src/layouts/Homepage.astro
@@ -1,5 +1,7 @@
 ---
-import '../styles/global.scss';
+import 'simpledotcss/simple.css';
+
+import '../styles/global.css';
 import '../styles/layout.css';
 ---
 
