feat: Add footer

--- a/src/layouts/Homepage.astro
+++ b/src/layouts/Homepage.astro
@@ -17,4 +17,5 @@ import '../styles/layout.css';
       <slot />
     </main>
   </body>
+  <footer>2024 - Santiago Mondragón Gómez</footer>
 </html>
