--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,6 +1,11 @@
 :root body {
     font-family: 'Geist', sans-serif;
     font-size: 1rem;
+
+    footer {
+        margin-top: 1rem;
+        padding: 1.5rem 1rem;
+    }
 }
 
 .pos-title, .exp-name {
