feat: add subheading

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,11 @@ import academy from '../content/es/academy.json';
 
 <Home>
   <h1>Santiago Mondragón Gómez</h1>
-  <div class="tagline">ingeniero de software</div>
+  <div class="subheading">
+    <div class="tagline">ingeniero de software</div>
+    <a href="https://www.linkedin.com/in/mondracode/">linkedin</a>
+    <a href="mailto:santiago@mondracode.com">santiago@mondracode.com</a>
+  </div>
   <History src={work} />
   <History src={academy} />
 </Home>
