--- a/src/layouts/Homepage.astro
+++ b/src/layouts/Homepage.astro
@@ -10,7 +10,7 @@ import '../styles/layout.css';
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light dark" />
-    <title>Hello world!</title>
+    <title>Santiago Mondragón Gómez</title>
   </head>
   <body>
     <main class="container">
